@@ -51,6 +51,7 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  [NextRelease]
  format = %-9v %{yyyy-MM-dd HH:mm:ss VVV}d%{ (TRIAL RELEASE)}T
  [CopyFilesFromRelease]
+ filename = INSTALL
  filename = LICENSE
  filename = META.json
  filename = Makefile.PL
@@ -60,6 +61,7 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  allow_dirty = dist.ini
  allow_dirty = Changes
  allow_dirty = README.pod
+ allow_dirty = INSTALL
  allow_dirty = LICENSE
  allow_dirty = META.json
  allow_dirty = Makefile.PL
@@ -72,10 +74,12 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  [Git::Push]
  
  [Git::GatherDir]
+ exclude_filename = INSTALL
  exclude_filename = LICENSE
  exclude_filename = META.json
  exclude_filename = Makefile.PL
  exclude_filename = Build.PL
+ exclude_match = ^CONTRIBUTING\.
  [PruneCruft]
  [ManifestSkip]
  [MetaYAML]
@@ -88,6 +92,7 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  dir = script
  [ShareDir]
  [MakeMaker]
+ [InstallGuide]
  [Manifest]
  [TestRelease]
  [ConfirmRelease]
