@@ -1,4 +1,7 @@
 {{$NEXT}}
+  - Generate INSTALL document
+  - Add CONTRIBUTING.md to minting profile, and exclude root-level CONTRIBUTING
+    documents from distribution gathering
 
 0.018     2015-09-02 19:03:32 EDT
   - Allow for version rewriting in script or bin in git commits
